--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "andrey-helldar/laravel-app": "^1.0",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
+        "laravel/sail": "^0.0.5",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
         "phpunit/phpunit": "^9.3.3"
