--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=26eb9ee7704fb53098b8",
+    "/css/app.css": "/css/app.css?id=f4d8b4dcea3280933ba3"
 }
