--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,6 +3,10 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+APP_TIMEZONE=
+APP_LOCALE=
+JWT_SECRET=
+JWT_TLL=
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -16,7 +20,7 @@ DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
